2002-11-09  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot by Cameron Simpson.

	* vector-buttons/vector-buttons.html: Added some vector buttons.

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.13

2002-10-30  Dan Espen  <dane@mk.telcordia.com>

	* cvs.html: Add instructions on where to send the encrypted
	password.

2002-10-29  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.5.4

2002-10-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.12

2002-10-09  Mikhael Goikhman  <migo@homemail.com>

	* screenshots/Mikhael-desk-*:
	replaced

	* generated/perllib/perllib2html:
	* generated/perllib/*.html:
	regenerated plus some new fixes

	* generated/manpages/FvwmGtkDebug.html:
	added

2002-09-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_m2f_communication.html:
	corrected a typo

2002-09-25  Mikhael Goikhman  <migo@homemail.com>

	* screenshots/make-thumb.sh:
	several changes, create jpg thumbs, suggest several contrast variants

	* screenshots/*:
	replaced Mikhael and Windows95 images;
	replaced xv-resized gifs with convert-resized jpgs

2002-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.11

2002-09-17  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Add link to freshmeat for CDEmu.

2002-09-17  Mikhael Goikhman  <migo@homemail.com>

	* generated/perllib/perllib2html:
	* generated/perllib/*.html:
	a new script for generating perl library documentation on the web;
	initially generated man pages

	* modules.html:
	added a link to perllib documentation

	* generated/manpages/manpages2html:
	replaced the old run_man2html
	* generated/manpages/*.html:
	regenerated all 2.4.x manpages, added new 2.5.x pages (not linked)

2002-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html: