@@ -460,6 +460,22 @@ in the menus are mostly taken from the
 <A HREF="http://wm-icons.sourceforge.net/">wm-icons</A> distribution.
  	</td></tr>
 
+	<td>
+	  Submitted by Parv.
+Parv says:
+(fvwm 2.5.4) shows titles on bottom and on right hand side,
+sticky windows with and without title-bars, FvwmPager, and
+aterm with transparent background and tinting.
+<p>
+You can visit Parv's web site and see
+the<A HREF="http://www103.pair.com/parv/comp/unix/x/#fvwm-2.5.4">
+configuration file</a>.
+
+See also the
+<A HREF="http://www103.pair.com/parv/comp/graphic.comp/shot-fvwm-2.5.4-annotated.png">
+annotated version of the screen shot</a>.
+ 	</td></tr>
+
       <tr valign="top"><td>
 	  <a href="http://www.zip.com.au/~cs/fvwm/">
 	    <img src="http://www.zip.com.au/~cs/fvwm/desktop0-thumb.jpg"
