@@ -1,3 +1,7 @@
+2002-11-26  Dan Espen  <dane@mk.telcordia.com>
+
+	* screenshots/index.html: Added Parv's screenshot.
+
 2002-11-09  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: Screenshot by Cameron Simpson.
